# valorant_cloud_2023-1

./: README.md  auth.sh  compose.yaml  db.sql  noname.gv  styles.css  valorant-prod-keys.pem  valorant_key_pair.pem
AppUser/: Dockerfile  Pipfile  README.md  post.http  pyproject.toml
AppUser/appusers/: __init__.py
Diagrams/: Proyecto cloud.drawio
Matches/: Dockerfile  README.md  pyproject.toml
Matches/matches/: __init__.py
PlayerAccount/: Dockerfile  pyproject.toml
PlayerAccount/player/: __init__.py
api_3_node/: README.md
src/: App copy.vue  App.vue
src/components/: PlayerInfo.vue  Test.vue  TheWelcome.vue
src/views/: AgentsView.vue
users-api/: Pipfile  README.md  config.py  db.txt  pyproject.toml
users-api/AppUser/: README.md  app.py  pyproject.toml
users-api/AppUser/app/: app.py
users-api/MATCHES/: pyproject.toml
users-api/MATCHES/app/: app.py
users-api/PlayerAccont/: Pipfile  README.md  app.py  pyproject.toml
users-api/app/: app.py
vue_frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
vue_frontend/src/: App.vue
vue_frontend/src/components/: Agents.vue  LoginInfo.vue  MatchesInfo.vue  PlayersInfo.vue  UsersInfo.vue
vue_frontend/src/router/: index.js
vue_frontend/src/views/: LoginView.vue  MatchesView.vue  PlayerInfoView.vue  PlayersView.vue  UsersView.vue
