[tool.poetry]
name = "player"
version = "0.1.0"
description = ""
authors = ["Enrique <enrique.flores@utec.edu.pe>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-restful = "*"
flask = "*"
flask-sqlalchemy = "*"
build = "*"
flask-mysql = "*"


[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
